added support for creating javavm from lua